# lab2_C

./: CMakeLists.txt  main.cpp
avg/: CMakeLists.txt  avgf.cpp  avgh.hpp
include/: introduction.hpp
